# reddit-sub-analyzer

./: .env.example  .gitignore  Dockerfile  MIGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  Procfile  README.md  REDDIT_API_SETUP.md  VERSION  auto_sub_analyzer.py  docker-compose.yml  pyproject.toml  requirements-redis-postgres.txt  requirements.txt  server-update.sh  subsearch_run_20251112_021508.csv  test_search.py  test_search_debug.py  web_app.py  wsgi.py  wsgi_wrapper.py
docs/: CHANGELOG.md  DEVELOPERS.md  HELP.md
nodes/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
nodes/migrations/: 0001_initial.py
reddit_analyzer/: __init__.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
scripts/: apply_overhaul.sh  deploy_subsearch.sh  migrate_sqlite_to_postgres.py  test_queue_priority.py  update_version.py
search/: __init__.py  admin.py  apps.py  context_processors.py  models.py  tasks.py  urls.py  views.py
static/: styles.css
subsearch/: .gitignore  __init__.py  __init__.py.bak.1762881389  __init__.py.bak.1762885023  auto_sub_analyzer.py  auto_sub_search.py.bak.1762881714  auto_sub_search.py.bak.1762881781  broadened_search.py  build_info.py  cache.py  cli.py  config.py  dao.py.bak.1762885023  phone_home.py  redis_queue.py  storage.py  web_app.py  web_app.py.bak.1762880973  web_app.py.bak.1762881575  web_app.py.bak.1762884858  web_app.py.bak.1762885408  web_app.py.bak.1762885531  web_app.py.bak.1762885748  web_app.py.bak.1762885801  web_app.py.bak.1762894663  web_app.py.bak.1762894803  web_app.py.bak.1762897841  web_app.py.bak.1762897908
subsearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/: all_subs.html  base.html  developer_docs.html  help.html  home.html  index.html  logs.html
(+27 files in other folders)
